--- a/index.html
+++ b/index.html
@@ -145,3 +145,8 @@
     </script>
   </div>
   <!-- TradingView Widget END -->
+    <!-- Custom JS for widget styling BEGIN -->
+    <script src="app.js"></script>
+    <!-- Custom JS END -->
+  </body>
+</html>
