--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
     </div>
 <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
+<div class="tradingview-widget-container"id="light">
     <div class="tradingview-widget-container__widget"></div>
     <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Watchlist</span></a> by TradingView</div>
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-quotes.js" async>
@@ -138,7 +138,7 @@
       }
     ],
     "showSymbolLogo": true,
-    "colorTheme": "dark",
+    "colorTheme": "light",
     "isTransparent": false,
     "locale": "en"
   }
