--- a/index.html
+++ b/index.html
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notion Stock Widget</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body class="light">
-    <!-- Light/Dark Btn -->
-    <div class="settings">
-      <div class="modes">
-        <button class="light">Light</button>
-        <button class="dark">Dark</button>
-      </div>
-    </div>
+
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container"id="Dark">
     <div class="tradingview-widget-container__widget"></div>
@@ -138,7 +123,7 @@
       }
     ],
     "showSymbolLogo": true,
-    "colorTheme": "Dark",
+    "colorTheme": "dark",
     "isTransparent": false,
     "locale": "en"
   }
